# upload-daemon

./: Main.hs  README.md  Setup.hs  default.nix  flake.nix  service.nix  shell.nix  upload-daemon.cabal
.buildkite/: pipeline.yml
.reuse/: dep5
test/: cache-priv-key.pem  cache-priv-key.pem.license  cache-pub-key.pem  default.nix  test-build.nix  upload-daemon.nix
